--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
+    "@tamagui/config": "^1.120.2",
     "expo": "~52.0.11",
+    "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
@@ -36,9 +39,13 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.0.2",
     "lottie-react-native": "^7.1.0",
+    "lucide-react-native": "^0.468.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-circular-progress": "^1.4.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-onboarding-swiper": "^1.3.0",
@@ -46,7 +53,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "tamagui": "^1.120.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
